# general

./: .gitignore  README.md  cli_publishers.md  create_node.sh  maneuvering_notes.md  maneuvering_notes2.md  map_buoys.py  positions.json  test_gps.sh  testing_maneuvering.md  update_coords.sh
comp_tasks/: CMakeLists.txt  package.xml
comp_tasks/config/: gps_points.yaml  gps_points.yaml.bak  params.yaml
comp_tasks/include/comp_tasks/: buoy_counter_component.hpp  collision_avoidance_component.hpp  docking_component.hpp  home_component.hpp  maneuvering_component.hpp  maneuvering_component_outdated.hpp  mavros_repub_component.hpp  nav_channel_component.hpp  navigation_component.hpp  speed_component.hpp  task_component.hpp  task_component_outdated.hpp  task_controller_component.hpp  test_life_cycle_node_component.hpp  wp_sender_component.hpp
comp_tasks/launch/: comp_tasks.launch.py  master.launch.py  njord.launch.py  njord_tasks.launch.py  oct_man_testing.launch.py  record_rosbags.launch.py  sim_comp_tasks.launch.py  sim_master.launch.py  sim_njord_tasks.launch.py  wp_sender.launch.py  yolo.launch.py
comp_tasks/lib/: bbox_calculations.cpp  lidar_calculations.cpp  task_lib.cpp  visualization.cpp
comp_tasks/routes/: plot_coords.py  plot_route.py  speed_circle.csv  speed_return_route.csv
comp_tasks/src/: buoy_counter_component.cpp  buoy_counter_composition.cpp  collision_avoidance_component.cpp  collision_avoidance_composition.cpp  detection_filter.cpp  docking_component.cpp  docking_composition.cpp  global_to_local.cpp  home_component.cpp  home_composition.cpp  local_to_global.cpp  maneuvering_component.cpp  maneuvering_component_outdated.cpp  maneuvering_composition.cpp  mavros_repub_component.cpp  mavros_repub_composition.cpp  nav_channel_component.cpp  nav_channel_composition.cpp  navigation_component.cpp  navigation_composition.cpp  speed_component.cpp  speed_composition.cpp  task_component.cpp  task_component_outdated.cpp  task_composition.cpp  task_controller_component.cpp  task_controller_composition.cpp  test_life_cycle_node_component.cpp  test_life_cycle_node_composition.cpp  wp_sender_component.cpp  wp_sender_composition.cpp
iceberg_cv_cpp/: CMakeLists.txt  package.xml
iceberg_cv_cpp/config/: blue_params.yaml  green_params.yaml  new_sun.yaml  overcast.yaml  overcast2.yaml  overcast3.yaml  params.yaml  red_params.yaml  sunny.yaml  sunny2.yaml  sunny3.yaml  sunny4.yaml
iceberg_cv_cpp/include/iceberg_cv_cpp/: ColorDetector.hpp
iceberg_cv_cpp/launch/: launch.py
iceberg_cv_cpp/src/: ColorDetector.cpp  ColorDetectorGreen.cpp
laser_segmentation/slg_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  codecov.yml
laser_segmentation/slg_msgs/test/: CMakeLists.txt  test_point2d.cpp  test_polygon.cpp  test_segment2d.cpp
markers_pkg/: CMakeLists.txt  package.xml
markers_pkg/launch/: laptop_vizualization.launch.py  launch_file.launch.py  main.launch.py  master_vizualization.launch.py  pub.launch.py  rviz.launch.py  sub.launch.py
markers_pkg/models/: boat-assembly-simple.STL  boat.STL
markers_pkg/rviz/: aug_12_maneuvering.rviz  collision-avoidance.rviz  july27.rviz  master_rl.rviz
markers_pkg/src/: publish_markers.cpp  rviz_markers.cpp  subscribe_markers.cpp  test_markers.cpp
mavros_subscriber_for_led_tower/: package.xml  setup.cfg  setup.py
mavros_subscriber_for_led_tower/mavros_subscriber_for_led_tower/: mavros_subscriber_for_led_tower.py  mavros_subscriber_for_led_tower_with_gpio_control.py
mavros_subscriber_for_led_tower/resource/: mavros_subscriber_for_led_tower
njord_tasks/: CMakeLists.txt  package.xml
njord_tasks/config/: master_params.yaml  navigation_waypoints.yaml  params.yaml  sim_params.yaml
njord_tasks/include/njord_tasks/: collision_avoidance_component.hpp  maneuvering_component.hpp  navigation_component.hpp  task_component.hpp  wp_sender_component.hpp
njord_tasks/launch/: master.launch.py  njord.launch.py  njord_tasks.launch.py  oct_man_testing.launch.py  record_rosbags.launch.py  sim_master.launch.py  sim_njord_tasks.launch.py  wp_sender.launch.py
njord_tasks/lib/: bbox_calculations.cpp  lidar_calculations.cpp  task_lib.cpp  visualization.cpp
njord_tasks/njord_maneuvering/: CMakeLists.txt  package.xml
njord_tasks/src/: bbox_visualization.cpp  collision_avoidance_component.cpp  collision_avoidance_composition.cpp  detection_filter.cpp  maneuvering_component.cpp  maneuvering_composition_outdated.cpp  navigation_component.cpp  navigation_composition.cpp  task_component.cpp  task_composition.cpp  wp_sender_component.cpp  wp_sender_composition.cpp
njord_tasks/test_msgs/: mock_bboxes.yaml
perception/: CMakeLists.txt  package.xml
perception/config/: params.yaml
perception/launch/: lidar_clusterer_component.launch.py  manual_composition.launch.py  perception_composition.launch.py
perception/lib/: bbox_calculations.cpp  helpers.cpp  lidar_calculations.cpp
perception/msg/: BoundingCircle.msg  BoundingCircleArray.msg
perception/src/: coord_finder_component.cpp  coord_finder_composition.cpp  gate_coord_finder_component.cpp  gate_coord_finder_component_tmp.cpp  gate_coord_finder_composition.cpp  lidar_camera_fuser_component.cpp  lidar_camera_fuser_composition.cpp  lidar_clusterer_component.cpp  lidar_prop_detector_component.cpp  lidar_prop_detector_composition.cpp  manual_composition.cpp  mock_bbox_pub_component.cpp  mock_bbox_pub_composition.cpp  mock_coord_pub_component.cpp  mock_coord_pub_composition.cpp
vehicle_control/: CMakeLists.txt  package.xml
vehicle_control/config/: params.yaml  wp_sender.yml
vehicle_control/launch/: wp_sender.launch.py  wp_sender.py
vehicle_control/src/: pixhawk_status.cpp  waypoint.txt  wp_sender.cpp
velocity_sender/: CMakeLists.txt  package.xml
velocity_sender/config/: zigzag.yml
velocity_sender/launch/: velocity_sender.launch.py
velocity_sender/src/: velocity_sender_component.cpp  velocity_sender_composition.cpp
video_encoder/: CMakeLists.txt  package.xml
video_encoder/lib/: gst_pipeline.cpp  gst_pipeline.hpp  main.cpp
video_encoder/src/: main.cpp  video_encoder.cpp
(+421 files in other folders)
