cmake_minimum_required(VERSION 3.8)
project(iceberg_cv_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(yolov8_msgs REQUIRED)
find_package(OpenCV REQUIRED)

# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
# Install launch files.
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}
)

install(DIRECTORY
  config
  DESTINATION share/${PROJECT_NAME}
)
add_executable(ColorDetector src/ColorDetector.cpp)
target_include_directories(ColorDetector PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_compile_features(ColorDetector PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
ament_target_dependencies(ColorDetector
  rclcpp
  sensor_msgs
  cv_bridge
  yolov8_msgs
  OpenCV
)

install(TARGETS ColorDetector
  DESTINATION lib/${PROJECT_NAME})

  add_executable(ColorDetectorGreen src/ColorDetectorGreen.cpp)
target_include_directories(ColorDetectorGreen PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_compile_features(ColorDetectorGreen PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
ament_target_dependencies(ColorDetectorGreen
  rclcpp
  sensor_msgs
  cv_bridge
  yolov8_msgs
  OpenCV
)

install(TARGETS ColorDetectorGreen
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
