<?xml version="1.0"?>
<package format="3">
  <name>mavros_subscriber_for_led_tower</name>
  <version>0.0.0</version>
  <description>ROS2 package to subscribe to mavros state</description>
  <maintainer email="faakhalil@mun.ca">Fares Khalil</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
